chore: complete pygame extraction phase-4 cutover